# algorithms-structs

./: README.md  README.org
rust/: Cargo.toml  README.org
rust/backtracking/: README.org
rust/backtracking/itterative_backtracking/: Cargo.toml
rust/backtracking/n_queens_problem/: Cargo.toml
rust/backtracking/permutations_of_a_set/: Cargo.toml
rust/backtracking/rat_in_a_maze/: Cargo.toml
rust/backtracking/recursive_backtracking/: Cargo.toml
rust/convex_hull/: README.org
rust/convex_hull/gift_wrapping/: Cargo.toml
rust/convex_hull/graham_scan/: Cargo.toml
rust/convex_hull/monotone_chain/: Cargo.toml
rust/convex_hull/quickhull/: Cargo.toml
rust/data_structs/: README.org
rust/data_structs/linked_lists/: Cargo.toml
rust/divide_and_conquer/: README.org
rust/divide_and_conquer/closest_pair_of_points/: Cargo.toml
rust/divide_and_conquer/strassens_algorithm/: Cargo.toml
rust/dynamic_programming/: README.org
rust/dynamic_programming/knapsack_0_1/: Cargo.toml
rust/dynamic_programming/longest_common_subsequence/: Cargo.toml
rust/dynamic_programming/matrix_chain_multiplication/: Cargo.toml
rust/dynamic_programming/minimum_weight_triangulation/: Cargo.toml
rust/greedy/: README.org
rust/greedy/fractional_knapsack/: Cargo.toml
rust/greedy/greedy_coin_change/: Cargo.toml
rust/greedy/heaps/: Cargo.toml
rust/greedy/huffman_coding/: Cargo.toml
rust/greedy/interval_scheduling/: Cargo.toml
rust/greedy/job_sequencing_with_deadlines/: Cargo.toml
rust/greedy/lexicographical_greedy/: Cargo.toml
rust/greedy/optimal_interleaving_of_ordered_strings/: Cargo.toml
rust/greedy/prims_algorithm/: Cargo.toml
rust/string_matching/: README.org
rust/string_matching/aho_corasick/: Cargo.toml
rust/string_matching/boyer_moore/: Cargo.toml
rust/string_matching/knuth_morris_pratt/: Cargo.toml
(+7 files in other folders)
